--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   },
   "homepage": "https://github.com/parishahla/Carry-clone#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
