--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "esm": "^3.2.25",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "6.3",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
