--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/parishahla/Carry-clone#readme",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
@@ -27,6 +28,9 @@
     "mongodb": "6.3",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "ndb": "^1.1.5",
+    "nodemailer": "^6.9.11",
     "nodemon": "^3.0.3",
     "winston": "^3.11.0"
   },
