--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "build": "nodemon esm app.js",
+    "start": "nodemon esm app.js",
     "debug": "ndb app.js"
   },
   "repository": {
@@ -33,6 +33,7 @@
     "ndb": "^1.1.5",
     "nodemailer": "^6.9.11",
     "nodemon": "^3.0.3",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
