--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.18.2",
+    "fastify": "^4.26.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.3",
